fixed the length of nutrition charts on view plan and dashboard on mobile

--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -47,7 +47,7 @@
 
 
 .dash_graphcard {
-    height: 40em !important;
+    height: 43em !important;
 }
 .sidemenu_margin {
     margin-top: 26px;
